--- a/css/style.css
+++ b/css/style.css
@@ -48,3 +48,16 @@ h1>a {
 .row.footer2 {
     margin-top: 20px;
 }
+
+.statvalues {
+  font-weight: bold;
+  font-size: 2rem;
+  display: block;
+}
+
+.statistics {
+  border: 1px solid #ddd;
+  border-radius: 3px;
+  padding: 10px 20px 10px 20px;
+  display: none;
+}
