--- a/css/style.css
+++ b/css/style.css
@@ -71,3 +71,10 @@ h1>a {
     display: inline;
     margin-right: 10px;
 }
+
+.patreon {
+  border: 1px solid #f55;
+  border-radius: 3px;
+  padding: 10px 20px 10px 20px;
+  margin-top: 20px;
+}
