--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-
+  font-family: "Source Sans Pro", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 .heading p {
@@ -65,11 +65,15 @@ h1>a {
     border: 1px solid #ddd;
     border-radius: 3px;
     padding: 10px 10px 0 10px;
+    text-align: center;
+}
+
+.topnodes ul {
+  margin-top: 10px;
 }
 
 .topnodes ul li {
-    display: inline;
-    margin-right: 10px;
+    text-align: left;
 }
 
 .patreon {
